Fix align item to center for testimonials

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,7 +239,7 @@ nav {
 .testimonial-headers {
   width: 90%;
   display: flex;
-  align-items: left;
+  align-items: center;
   justify-content: center;
   flex-direction: column;
 }
